--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Travel Buddy | Where are we going today?</title>
+    <title>Viet Guy | Lemme guide you</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
